# SGE

./: .gitattributes  CMakeLists.txt  README.md  SGEConfig.cmake.in  test.c
Documentation/: display  file.txt  how to use.md  input_control.txt  logger.txt  memory_control.txt  os_specific_stuff.txt  renderer.md  renderer.txt  sgerend documentation.md
Documentation/core/: input.md  logging.md  memory_control.md
Documentation/core/platform/: sge_platform.md  sge_window.md
Documentation/renderer/: sge_camera.md  sge_region.md  sge_render.md  sge_render_file.md  sge_scene_file.md
Documentation/renderer/apis/: sge_vulkan.md
Documentation/renderer/files/: sgescene documentation.md  sgetext.md
Documentation/renderer/shader/: sge_shader_utils.md
Documentation/utils/: sge_file.md  sge_math.md  sge_string.md  sge_time.md  sge_utils.md
Documentation/utils/hash/: sge_crc32.md
include/: SGE.h  sge_types.h  sge_version.h
include/core/: input.h  logging.h  memory_control.h
include/core/platform/: sge_platform.h  sge_window.h
include/renderer/: sge_camera.h  sge_region.h  sge_render.h  sge_render_file.h  sge_scene_file.h  sge_texture_file.h
include/renderer/apis/: sge_directx.h  sge_opengl.h  sge_vulkan.h
include/renderer/shader/: sge_shader_utils.h
include/utils/: sge_file.h  sge_math.h  sge_string.h  sge_time.h  sge_utils.h
include/utils/cpu/: sge_endianess.h
include/utils/hash/: crc32.h  sge_crc32.h
include/utils/image/: sge_png.h
src/: SGE.c  SGE.h  sge_version.c
src/core/: input.c  input.h  logging.c  logging.h  memory_control.c  memory_control.h  sge_internal_logging.c  sge_internal_logging.h
src/core/os_specific/: os_utils.c  os_utils.h  sge_platform.c  sge_window.h  sge_window_win32.c  steinwindow_unix.c
src/renderer/: sge_camera.c  sge_camera.h  sge_internal_render.c  sge_internal_render.h  sge_region.c  sge_region.h  sge_render.c  sge_render.h  sge_render_file.c  sge_render_file.h  sge_scene_file.c  sge_scene_file.h  sge_texture_file.c  sgerend documentation.md  sgescene documentation.md
src/renderer/old replacing now/vulkan/: .txt  sge_vulkan_instance.c  swapchain.c  vulkan_allocator.c  vulkan_renderer.c  vulkan_renderer.h  vulkan_shutdown.c
src/renderer/shaders/: sge_shader_utils.c  sge_shader_utils.h  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert
src/renderer/vulkan_renderer/: sge_vulkan_allocator.c  sge_vulkan_allocator.h  sge_vulkan_buffer.c  sge_vulkan_buffer.h  sge_vulkan_command.c  sge_vulkan_command.h  sge_vulkan_descriptor.c  sge_vulkan_descriptor.h  sge_vulkan_device.c  sge_vulkan_device.h  sge_vulkan_draw.c  sge_vulkan_draw.h  sge_vulkan_instance.c  sge_vulkan_instance.h  sge_vulkan_memory.c  sge_vulkan_memory.h  sge_vulkan_pipeline.c  sge_vulkan_pipeline.h  sge_vulkan_renderables.c  sge_vulkan_renderables.h  sge_vulkan_resize.c  sge_vulkan_resize.h  sge_vulkan_shader.c  sge_vulkan_shader.h  sge_vulkan_surface.c  sge_vulkan_surface.h  sge_vulkan_swapchain.c  sge_vulkan_swapchain.h  sge_vulkan_sync.c  sge_vulkan_sync.h  sge_vulkan_uniform.c  sge_vulkan_uniform.h  vulkan_renderer.c  vulkan_renderer.h  vulkan_structs.h
src/utils/: sge_file.c  sge_math.c  sge_math.h  sge_string.c  sge_time.c  sge_utils.c  steinfile.c  steinfile.h  steinstring.c  steinstring.h  steintime.c  steintime.h  steinutils.c  steinutils.h
src/utils/cpu/: sge_endianess.c
src/utils/hash/: crc32.c  sge_crc32.c
src/utils/image/: sge_png.c
